core/component_svg/css/component_svg.less
/**
* component_svg
*
* Included from main.less file
*/
.component_svg {

	&.edit {

		>.content_data {

			// sqg container
			>.content_value {

				// image container
				>.image_container {
					height: 100%;
					max-height: 100%;
					width: 100%;
					position: relative;
					display: flex;
					justify-content: center;
				}

				// img
				>.image.svg_element {
					padding: 0px;
					height: 100%;
					max-height: 100%;
					max-width: 100%;
					object-fit: contain;
					object-position: center;
				}

				.fallback_image {

				}
			}
		}
	}

	&.list {

		>.content_data {

			>img {
				padding: 0.33rem !important;
			}
		}
	}

	&.search {

	}

	&.view_default {

	}

	&.view_viewer {

		.content_data {

			.content_value {
				height: calc(100vh - 3rem);
			}
		}
	}

	&.view_line {

		&.list {
			height: var(--view_text_height); //	2rem;
		}
		&.edit {
			max-height: 15rem;
			display: inline-block;
			img {
				height: 100%;
				max-height: 15rem;
				max-width: 100%;
				object-fit: contain;
				object-position: center;
			}
		}
	}

	// with suffix _mini like 'component_text_area_mini'
	&_mini {
		display: inline-block;
		vertical-align: middle;

		img {
			height: var(--view_text_height); //	2rem;
		}
	}

	&.view_text {

	}

	&.view_tag {
		img {
			width: 100%;
			height: 100%;
			object-fit: contain;
		}
	}

}//end .component_svg

